Update styles.css to fix overflow

--- a/styles.css
+++ b/styles.css
@@ -860,7 +860,7 @@ label {
     top: 0;
     left: 0;
     min-width: 100%;
-    min-height: 100%;
+    max-height: 100%;
     z-index: 999;
     padding-top: 1%;
     background-color: rgba(193, 199, 208, 0.8);
@@ -892,6 +892,7 @@ label {
 
   .popup_image {
     width: 100%;
+    max-height: 33%;
     height: 60%;
   }
 
